project(
    'pomodoro-backend',
    'cpp',
    version : '0.1.0',
    default_options: ['warning_level=3', 'werror=true', 'cpp_std=c++17', 'optimization=g'],
)

# project include files are stored in separate folder structure
subdir('include')

# source files go here
subdir('src')

# test files go here
subdir('tests')
